# ppt-joao

./: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crop.rs  lib.rs  main.rs
src-tauri/src/image_sorter/: mod.rs
src/components/: theme-provider.tsx
src/lib/: forward-console.ts
src/lib/hooks/: use-callback-ref.tsx  use-debounce.tsx
src/routes/: __root.tsx  index.tsx
