[package]
authors = ["you"]
description = "A Tauri App"
edition = "2024"
name = "ppt-joao"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "ppt_joao_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.98"
image = { version = "0.24.9" }
imageproc = "0.23.0"
kalosm-ocr = "0.4.0"
libm = "0.2.11"
log = "0.4.27"
radix_trie = "0.2.1"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["serde", "derive"] }
specta-typescript = "0.0.9"
strsim = "0.11.1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2.0.12"


[target.'cfg(windows)'.dependencies]
kalosm-ocr = { version = "0.4.0", features = ["cuda"] }

[target.'cfg(macos)'.dependencies]
kalosm-ocr = { version = "0.4.0", features = ["metal"] }
